--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
+    "knex": "^2.4.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1"
   }
